PyMaker/datas/object2/RawHTML/i13401/Python_DOC_referPages.what-is-causing-this-python-syntax-error.txt
<div class="post-text" itemprop="text">
<p>I'm totally new to Python, and I'm trying to run my server but I'm getting this syntax error from the project I'm working on.</p>
<pre><code>    def find_shortest_path(start: GraphNode, end, path=[]):
                                ^
SyntaxError: invalid syntax
</code></pre>
<p>To be clear, I didn't write the code, I'm just supposed to style the project but I don't know how else to <em>see</em> the app without running it in the server.</p>
</div>
<div class="post-text" itemprop="text">
<p>This code appears to be using <a href="https://docs.python.org/3/tutorial/controlflow.html#function-annotations" rel="nofollow noreferrer">function annotations</a> which are only available in Python 3.X. </p>
<p>What <a href="https://stackoverflow.com/questions/8917885/which-version-of-python-do-i-have-installed">version</a> of Python are you using?</p>
</div>
<span class="comment-copy">I'm using...Python 2.7.10 (when I run python -V) I don't know what version the app uses?</span>
<span class="comment-copy">@JustusEapen can you provide more information about what app it is? I suspect if you install python3 and use that to start the django app, it will work.</span>
<span class="comment-copy">installing Python 3 on my machine? I can give you more details on the app offline if you have time...</span>
<span class="comment-copy">Ok I'm installing python3. Thanks all.</span>
<span class="comment-copy">That worked! Thank you!</span>
